# wd_assistant

./: Cargo.toml  README.md
agent/: Cargo.toml
agent/src/: lib.rs
agent/src/agent/: agent.rs  builder.rs  mod.rs
agent/src/model/: coze.rs  define.rs  mod.rs  qwen.rs
agent/src/utils/: http_stream.rs  mod.rs
webui/: Cargo.toml
webui/src/: main.rs
webui/src/config/: const_config.rs  memory_config.rs  mod.rs
webui/src/framework/: adsorb_window.rs  chat_window.rs  floating_window.rs  mod.rs
webui/src/pkg/: async_rt.rs  mod.rs
