[package]
name = "agent"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
wd_log.workspace = true
wd_tools = { workspace = true,features = ["point-free","sync"]}
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-channel.workspace = true
reqwest.workspace = true
tokio = {workspace = true,features = ["full"]}
wd_macro.workspace = true
bytes = "1.7.2"