[package]
name = "webui"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
eframe = {version = "0.29",features = ["default"]}
egui_extras = { version = "0.29", features = ["default", "all_loaders"] }