[package]
name = "webui"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
tokio = {workspace = true,features = ["rt-multi-thread"]}
anyhow.workspace = true
wd_macro.workspace = true
wd_tools = { workspace = true,features = ["point-free","sync"]}
wd_log.workspace = true

eframe = {version = "0.29",features = ["default"]}
egui_extras = { version = "0.29", features = ["default", "all_loaders"] }
agent = {version = "0.1",path = "../agent"}